--- a/skins/elastic/templates/includes/layout.html
+++ b/skins/elastic/templates/includes/layout.html
@@ -12,9 +12,17 @@
 <roundcube:add_label name="choosefiles" />
 <roundcube:object name="doctype" value="html5" />
 <roundcube:if condition="!env:framed || env:extwin" />
-<html>
+	<roundcube:if condition="env:action != 'print' && !config:devel_mode && config:dark_mode_support && env:color_mode == 'dark'" />
+		<html class="dark-mode">
+	<roundcube:else />
+		<html>
+	<roundcube:endif />
 <roundcube:else />
-<html class="iframe">
+	<roundcube:if condition="env:action != 'print' && !config:devel_mode && config:dark_mode_support && env:color_mode == 'dark'" />
+		<html class="iframe dark-mode">
+	<roundcube:else />
+		<html class="iframe">
+	<roundcube:endif />
 <roundcube:endif />
 <head>
 	<roundcube:object name="meta" />
@@ -27,17 +35,6 @@
 	<roundcube:else />
 		<link rel="stylesheet" href="/styles/styles.css">
 		<roundcube:link rel="stylesheet" href="/styles/print.css" condition="env:action == 'print'" />
-	<roundcube:endif />
-	<roundcube:if condition="env:action != 'print' && !config:devel_mode && config:dark_mode_support" />
-		<script>
-		try {
-			if (document.cookie.indexOf('colorMode=dark') > -1
-				|| (document.cookie.indexOf('colorMode=light') === -1 && window.matchMedia('(prefers-color-scheme: dark)').matches)
-			) {
-				document.documentElement.className += ' dark-mode';
-			}
-		} catch (e) { }
-		</script>
 	<roundcube:endif />
 </head>
 <body class="task-<roundcube:exp expression="env:error_task ?: env:task ?: 'error'"> action-<roundcube:exp expression="asciiwords(env:action, true, '-') ?: 'none'">">
